--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -4,3 +4,31 @@ input {
   float: right;
   margin: -50px 0 5px 0;
 }
+
+div.alert {
+  padding: 10px;
+  border-radius: 4px;
+  background-color: rgb(162, 232, 253);
+  margin-bottom: 14px;
+}
+
+img.qrcode {
+  border: solid 10px #000;
+  max-width: 400px;
+  min-width: 200px;
+  padding: 10 auto;
+  margin-bottom: 20px;
+}
+
+a.btn {
+  background-color: #000;
+  padding: 10px;
+  border-radius: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: larger;
+}
+
+p.subtitle {
+  margin-top: -10px;
+}
