--- a/_includes/social.html
+++ b/_includes/social.html
@@ -36,7 +36,7 @@
         <use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use>
       </svg> <span class="username">{{ site.twitter_username| escape }}</span></a></li>{%- endif -%}
   {%- if site.youtube_username -%}<li><a
-      href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}"><svg class="svg-icon">
+      href="https://youtube.com/@{{ site.youtube_username| cgi_escape | escape }}"><svg class="svg-icon">
         <use xlink:href="{{ '/assets/minima-social-icons.svg#youtube' | relative_url }}"></use>
       </svg> <span class="username">{{ site.youtube_username| escape }}</span></a></li>{%- endif -%}
   {%- if site.googleplus_username -%}<li><a href="https://plus.google.com/{{ site.googleplus_username| escape }}"><svg
