--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,5 +1,4 @@
 <div class="embed-container">
-  <iframe src="https://www.youtube.com/embed/{{ include.id }}" width="700" height="480" frameborder="0"
-    allowfullscreen="true">
-  </iframe>
+  <iframe src="https://www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen="true" width="100%"
+    frameborder="0" allowfullscreen="true" s=""></iframe>
 </div>
